# wallhaven-sync

./: '  .editorconfig  .gitignore  CHANGELOG.md  LICENSE  README.md  Session.vim  wallhaven-downloader.cabal  wallhaven-sync.cabal
app/: Main.hs  Retry.hs  Types.hs
app/Util/: Batch.hs  HTTP.hs  List.hs  Time.hs  Wallhaven.hs
app/Wallhaven/: CLI.hs  Env.hs  Favorites.hs
src/: Retry.hs  Types.hs
src/Database/FileSystem/: Action.hs
src/Types/: WallhavenAPI.hs
src/Util/: Batch.hs  FileSystem.hs  HTTP.hs  List.hs  Retry.hs  Time.hs  Wallhaven.hs
src/Util/Wallhaven/: Exception.hs  Interaction.hs  Logic.hs  Monad.hs
src/Wallhaven/: Action.hs  Exception.hs  Logic.hs  Monad.hs  Types.hs
src/Wallhaven/API/: Action.hs  Class.hs  Exception.hs  Logic.hs  Types.hs
src/Wallhaven/Implementation/: API.hs  FileSystemDB.hs
test/: HTTPSpec.hs  RetrySpec.hs
test/Types/: WallhavenAPISpec.hs
test/Util/: BatchSpec.hs  Gen.hs  HTTPSpec.hs  RetrySpec.hs  WallhavenSpec.hs
test/Wallhaven/: ActionSpec.hs  LogicSpec.hs
test/Wallhaven/API/: LogicSpec.hs  TypesSpec.hs
