cabal-version:      2.4
name:               wallhaven-downloader
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:
-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Amogh Rathore
maintainer:         amoghdroid09@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable wallhaven-sync
    main-is:          Main.hs
    ghc-options:      -Wall

    -- Modules included in this executable, other than Main.
    other-modules: 
        Wallhaven.Favorites,
        Wallhaven.CLI,
        Retry,
        Types,
        Util.Time,
        Util.List,
        Util.HTTP

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.16.3.0, 
        http-conduit ^>=2.3.8, 
        bytestring ^>=0.11.3.1,
        tagsoup ^>=0.14.8,
        filepath ^>=1.4.100.0,
        http-types ^>=0.12.3,
        directory ^>=1.3.8.0,
        optparse-applicative ^>=0.17.0.0,
        mtl ^>=2.3.1,
        split ^>=0.2.3.5,
        unliftio ^>=0.2.23.0

    hs-source-dirs:   app
    default-language: Haskell2010
    extensions:       OverloadedStrings, BangPatterns, FlexibleContexts,
                      TypeApplications, GeneralizedNewtypeDeriving,
                      FlexibleInstances, ScopedTypeVariables, TupleSections
