cabal-version:      2.4
name:               wallhaven-sync
version:            0.1.0.0

synopsis: Sync your Wallhaven favorites to your local disk
description: 
  wallhaven-sync is a tool for syncing your Wallhaven favorites 
  to your local disk. 

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
author:             Amogh Rathore
maintainer:         amoghdroid09@gmail.com

extra-source-files: CHANGELOG.md

executable wallhaven-sync
    main-is:          Main.hs
    ghc-options:      -Wall

    -- Modules included in this executable, other than Main.
    other-modules: 
        Wallhaven.Favorites,
        Wallhaven.CLI

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.16.3.0, 
        http-conduit ^>=2.3.8, 
        bytestring ^>=0.11.3.1,
        tagsoup ^>=0.14.8,
        filepath ^>=1.4.100.0,
        http-types ^>=0.12.3,
        directory ^>=1.3.8.0,
        optparse-applicative ^>=0.17.0.0,
        mtl ^>=2.3.1,
        containers ^>=0.6.6,
        split ^>=0.2.3.5,
        unliftio ^>=0.2.23.0,
        wallhaven-sync-internal

    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:       
      OverloadedStrings, BangPatterns, FlexibleContexts,
      TypeApplications, GeneralizedNewtypeDeriving,
      FlexibleInstances, ScopedTypeVariables, TupleSections

library wallhaven-sync-internal
    exposed-modules: 
        Retry,
        Types,
        Util.Time,
        Util.List,
        Util.HTTP,
        Util.Wallhaven

    build-depends:    
        base ^>=4.16.3.0,
        mtl ^>=2.3.1,
        bytestring ^>=0.11.3.1,
        http-conduit ^>=2.3.8, 
        containers ^>=0.6.6,
        split ^>=0.2.3.5,
        http-types ^>=0.12.3,
        unliftio ^>=0.2.23.0

    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: TypeSynonymInstances, BangPatterns

Test-Suite spec
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    other-modules:      Util.WallhavenSpec
    hs-source-dirs:     test
    default-language:   Haskell2010
    ghc-options:        -Wall
    build-depends:    
        base ^>=4.16.3.0, 
        hspec ^>=2.10.6,
        QuickCheck ^>=2.14.2,
        wallhaven-sync-internal
    build-tool-depends: hspec-discover:hspec-discover ^>=2.10.6
