cabal-version: 2.4
name:          wallhaven-sync
version:       0.1.0.0
license:       MIT
maintainer:    amoghdroid09@gmail.com
author:        Amogh Rathore
synopsis:      Syncs your Wallhaven favorites to your local disk
description:
    wallhaven-sync is a tool for syncing your Wallhaven favorites
    to your local disk.

category:      command-line tool

source-repository head
    type:     git
    location: https://github.com/amogh09/wallhaven-sync

library wallhaven-sync-internal
    exposed-modules:
        Retry
        Types
        Util.Time
        Util.List
        Util.HTTP
        Util.Wallhaven
        Types.WallhavenAPI

    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: TypeSynonymInstances BangPatterns OverloadedStrings
    ghc-options:        -Wall
    build-depends:
        base ^>=4.16.3.0,
        mtl ^>=2.3.1,
        bytestring ^>=0.11.3.1,
        http-conduit ^>=2.3.8,
        containers ^>=0.6.6,
        split ^>=0.2.3.5,
        http-types ^>=0.12.3,
        aeson ^>=2.1.1.0,
        unliftio ^>=0.2.23.0

executable wallhaven-sync
    main-is:            Main.hs
    hs-source-dirs:     app
    other-modules:
        Wallhaven.Favorites
        Wallhaven.CLI

    default-language:   Haskell2010
    default-extensions:
        OverloadedStrings BangPatterns FlexibleContexts TypeApplications
        GeneralizedNewtypeDeriving FlexibleInstances ScopedTypeVariables
        TupleSections

    ghc-options:        -Wall -threaded
    build-depends:
        base ^>=4.16.3.0,
        http-conduit ^>=2.3.8,
        bytestring ^>=0.11.3.1,
        tagsoup ^>=0.14.8,
        filepath ^>=1.4.100.0,
        http-types ^>=0.12.3,
        directory ^>=1.3.8.0,
        optparse-applicative ^>=0.17.0.0,
        mtl ^>=2.3.1,
        containers ^>=0.6.6,
        split ^>=0.2.3.5,
        unliftio ^>=0.2.23.0,
        wallhaven-sync-internal

test-suite spec
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    build-tool-depends: hspec-discover:hspec-discover ^>=2.10.6
    hs-source-dirs:     test
    other-modules:
        Util.WallhavenSpec
        Types.WallhavenAPISpec

    default-language:   Haskell2010
    default-extensions: OverloadedStrings
    ghc-options:        -Wall
    build-depends:
        base ^>=4.16.3.0,
        hspec ^>=2.10.6,
        QuickCheck ^>=2.14.2,
        aeson ^>=2.1.1.0,
        wallhaven-sync-internal
